# my_first_rust_project

./: main
axum-utopia-demo/: Cargo.toml  diesel.toml  docker-compose.yaml  servers.json
axum-utopia-demo/migrations/2025-09-24-053459-0000_create_users/: up.sql
axum-utopia-demo/src/: db.rs  main.rs  routes.rs
axum-utopia-demo/src/handlers/: greet_handler.rs  mod.rs  user.rs  user_handler.rs
axum-utopia-demo/src/models/: greet.rs  user.rs
axum-utopia-demo/src/repositories/: state.rs  user.rs
axum-utopia-demo/src/util/: crud.rs
guessing_game/src/: main.rs
nest_api/: package.json  pnpm-lock.yaml  swagger-spec.json  tsconfig.json
nest_api/src/: app.controller.ts  app.service.ts  main.ts
next_test/: .gitignore  package.json  sdk.json
silas_ecommerse_features/: Cargo.toml
silas_ecommerse_features/src/: lib.rs  main.rs  routes.rs
