[package]
name = "axum-utopia-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Existing dependencies
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }


# Diesel dependencies
diesel = { version = "2.1", features = ["postgres", "chrono"] }
diesel-async = { version = "0.6", features = ["postgres", "deadpool"] }
diesel_migrations = "2.1"

# Utoipa dependencies for OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras", "macros", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
