[package]
name = "silas_ecommerse_features"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = "4.11.0"
photon-rs = "0.3.3"
utoipa = "5.4.0"
wasm-bindgen = "0.2.100"
serde = { version = "1", features = ["derive"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
actix-multipart = "0.7.2"
futures-util = "0.3.31"
